[package]
name = "turn_off_monitors"
version = "0.1.0"
authors = ["Scott <wpscott@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
lto = true          # Enable Link Time Optimization
panic = 'abort'     # Abort on panic